fix mail box on mobile resolution <320  with an hack

--- a/css/header.css
+++ b/css/header.css
@@ -237,10 +237,15 @@
 }
 
 /** --- END COUNTDOWN*/
-
-@media (max-width: 375px){
+@media (max-width: 320px){
   .flex{
     flex: hack;
+  }
+}
+
+@media (min-width: 321px) and (max-width: 375px){
+  .flex{
+    flex: none;
   }
 }
 
